# shrimptuber

./: Cargo.toml
assets/: phone.tpsheet  shrimpy.tpsheet
src/: main.rs
