[package]
name = "shrimptuber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x11-dl = "2.19.0"
gl = "0.14.0"
sdl2-sys = "0.35.2"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]
